# patient_monitoring_gcp

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  septic_risk_pipeline.yaml
code/: bigquery_load.py  bigtable_load.py  ingest.py  log.py  vertex_pipeline.py
design_docs/: ARCHITECTURE.md  SCHEMA_DEFENSE.md
notebooks/: 01_eda.ipynb
sql/: analytical_query.sql
